Tue Mar 22 22:09:09 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.h:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/README:
        * utils/logWalker/Session.h:
        * utils/logWalker/Session.cpp:
        * utils/logWalker/Thread.h:
        * utils/logWalker/Thread.cpp:
        * utils/logWalker/logWalker.cpp:
        
          Incremental improvements to the log walker utility, mostly in
          error reporting, also with thread encounter tracking, and source
          identification.

Tue Mar 22 21:40:44 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/catior/Catior_i.h:
        * utils/catior/Catior_i.cpp:

          Add the parsing of TAG_MULTIPLE_COMPONENTS which is still used
          by some ORBs. Also add the detection of ORB type JacORB to help
          with the identification of IORs in a heterogeneous environment.

Tue Mar 22 14:31:19 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3942_Regression/Bug_3942_Regression.cpp:

          Fuzz fixes and avoid compiler errors, even though they are
          indicative of bugs in TAO.  At least one compiler accepts the
          code and we can use the runtime failures on that compiler.

Mon Mar 21 18:15:12 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Stub.inl:
        * tao/Stub.cpp:
          Moved refcount manipulate methods inline

Mon Mar 21 17:27:15 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3942_Regression/Bug_3942_Regression.cpp:
        * tests/Bug_3942_Regression/Bug_3942_Regression.mpc:
        * tests/Bug_3942_Regression/Foo.idl:
        * tests/Bug_3942_Regression/run_test.pl:

          Adding regression test for bug 3942, not yet fixed.

Mon Mar 21 10:34:42 UTC 2011  Martin Corino  <corino_m@remedy.nl>

        * tao/DynamicInterface/Server_Request.cpp:
